Fix light/dark mode theme-color in meta

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,7 @@
 html {
     padding: 0;
     margin: 0;
+    background-color: var(--background-color);
 }
 
 body {
